--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<div class="col-md-6 p-0">
 					<div class="gallery-right-col">
 						<div class="gallery-item">
-							<img src="img/gallery/4.gif" alt="#">
+							<img src="img/gallery/20221101_180659.jpg" alt="#">
 							<h2>4 этап:</h2>
 							<p>Ну и вот настал почти финальные действия перед получение сахара. Я поставил на плиту кастрюлю с свекольным соком и начал испарять лишнюю воду, пока через 15 минут на среднем огне сироп не начал загустевать. И спустя ещё 5 минут получился сироп с консистенцией мёда. Это то что нужно. Под конец я добавил щепотку сахара для ускорения кристаллизации.</p>
 						</div>
